# pyPept

./: .gitignore  LICENSE  README.md  description.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_pyPept.py  setup.py  test.py
docs/source/: Installation.rst  conf.py  index.rst
docs/source/reference/: index.rst
docs/source/templates/: authors.html
examples/: branched_peptide.py  capped_peptide.py  cycle_peptide.py  list_biln.txt  list_helm.txt  nnaa_peptide.py
pyPept/: __init__.py  conformer.py  converter.py  molecule.py  sequence.py
pyPept/data/: example_preProcessed_monomer.sdf  map_monomers.py  matrix.txt  total_SS.txt
src/pyPept/: __init__.py  conformer.py  converter.py  molecule.py  monomerlib.py  sequence.py
src/pyPept/biln/: __init__.py
src/pyPept/biln/bits/: __init__.py  abstractions.py  defaults.py
src/pyPept/biln/parser/: __init__.py  implementation.py
src/pyPept/data/: details_monomers.csv  example_preProcessed_monomer.sdf  list_monomers.txt  monomers.sdf
src/pyPept/interfaces/: cli-BILN-ValidityChecker.py  map_monomers.py  run_pyPept.py
tests/: conformer_Test.py  converter_Test.py  molecule_Test.py  sequence_Test.py  test.py
